@@ -407,7 +407,7 @@ class SimpleUpdateLattice(AbstractLattice):
         delta_tau : float
             The delta tau in the evolution operator.
         new_dimension : int | float
-            The dimension cut used in svd of simple update, or the amplitude of dimension expandance.
+            The dimension cut used in svd of simple update, or the threshold for the singular value.
         """
 
         # Create updater first
@@ -609,8 +609,6 @@ class SimpleUpdateLattice(AbstractLattice):
         right = self[i, j + 1]
         right = self._try_multiple(right, i, j + 1, "L", division=True)
         original_dimension = left.edges("R").dimension
-        if isinstance(new_dimension, float):
-            new_dimension = round(original_dimension * new_dimension)
         left_q, left_r = left.qr("r", {*(f"P{orbit}" for body_index, orbit in left_index_and_orbit), "R"}, "R", "L")
         right_q, right_r = right.qr("r", {*(f"P{orbit}" for body_index, orbit in right_index_and_orbit), "L"}, "L", "R")
         u, s, v = (
@@ -672,8 +670,6 @@ class SimpleUpdateLattice(AbstractLattice):
         down = self[i + 1, j]
         down = self._try_multiple(down, i + 1, j, "U", division=True)
         original_dimension = up.edges("D").dimension
-        if isinstance(new_dimension, float):
-            new_dimension = round(original_dimension * new_dimension)
         up_q, up_r = up.qr("r", {*(f"P{orbit}" for body_index, orbit in up_index_and_orbit), "D"}, "D", "U")
         down_q, down_r = down.qr("r", {*(f"P{orbit}" for body_index, orbit in down_index_and_orbit), "U"}, "U", "D")
         u, s, v = (
